deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
  namespace: my
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: httpserver
          command:
            - /bin/sh
            - -c
            - "/httpserver/httpserver --config=/httpserver/config.yaml"
          image: crazytomato/httpserver:v3.0
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              port: http
              path: /api/v1/zsj/healthz
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: http
              path: /api/v1/zsj/healthz
          lifecycle:
            preStop:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - "echo 'Stopping'; sleep 10"
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /httpserver/config.yaml
              name: config
              subPath: config.yaml
      volumes:
        - name: config
          configMap:
            defaultMode: 0444
            name: httpserver-config
            items:
              - key: config.yaml
                path: config.yaml
