deploy/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: my
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "httpserver.my.com"
      port:
        number: 80
        name: http
        protocol: HTTPS
      tls:
        credentialNmae: httpserver
        mode: SIMPLE
