deploy/virtualserver.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpseerver
  namespace: my
spec:
  hosts:
    - "httpserver.my.com"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: httpserver.my.svc.cluster.local
            port:
              number: 80
