deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  labels:
    app: httpserver
  name: httpserver-ingress
  namespace: my
spec:
  rules:
    - host: "my.k8s.domain"
      http:
        paths:
          - backend:
              serviceName: httpserver-svc
              servicePort: 30000
            path: "/httpserver"
